23 June 2014: Wouter
	- Patches from Pavel Simerda:
	  Fixup for python2.
	  fix a race condition with NetworkManager restart.
	  don't fail on empty connection list.

20 June 2014: Wouter
	- Patches from Pavel Simerda:
	  fix bug that prevents calling dnssec-trigger-control
	  submit (https://bugzilla.redhat.com/show_bug.cgi?id=1105896)
	  avoid dependency on pidof
	  handle missing resolv.conf backup gracefully
	  upgrade zone cache format at startup (
	  https://bugzilla.redhat.com/show_bug.cgi?id=1111143)
	  always log to stderr

4 June 2014: Wouter
	- Patch from Pavel Simerda. This, among other things, allows to
	  restart unbound and/or dnssec-trigger without restarting
	  NetworkManager when it's configured not to touch the DNS.
	  And, avoid Filenotfounderror not available in python 2,
	  https://bugzilla.redhat.com/show_bug.cgi?id=1100794
	  And fix unbound output parser
	  https://bugzilla.redhat.com/show_bug.cgi?id=1100796

22 May 2014: Wouter
	- release 0.12.
	- trunk is 0.13 in development.
	- updated authority server addresses builtin to dnssec-trigger for
	  d root server (ipv4) and c root server (ipv6) for its tests.

7 May 2014: Wouter
	- Updated dnssec-trigger-script.in to distinguish secure and
	  insecure zones, and to flush the unbound cache on DNS server
	  list changes. (from Pavel Simerda).

15 April 2014: Wouter
	- Change the ip-address of tcp and ssl service from broer.nlnetlabs.nl
	  to zus.nlnetlabs.nl (we changed netblocks).  The new ip address
	  and new certificate fingerprint (because of ssl heartbleed vuln)
	  are in the example.conf file.  The cert was only used for transport
	  and not for authentication, so its change was low priority.

8 April 2014: Wouter
	- Patch for dnssec-trigger-script.in --async flag from Pavel Simerda,
	  stops dnssec-trigger-script to block on networkmanager, which is
	  good in cases when networkmanager blocks on the script.

28 March 2014: Wouter